<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/DarkGrey">

    <ImageView
        android:id="@+id/back_detail"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@color/VeryDarkGrey"
        android:scaleType="centerCrop"
        android:contentDescription="@string/backgrounddetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avaGithub"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        app:civ_border_width="3dp"
        app:civ_border_color="@color/almostWhite"
        tools:src="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hr_line"/>

    <include
        android:id="@+id/includeds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        layout="@layout/account_detail_view"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/avaGithub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hr_line"/>

    <View
        android:id="@+id/hr_line"
        android:background="#ffffff"
        android:layout_width = "match_parent"
        android:layout_height="0.2dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/avaGithub"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        tools:text="@string/nameDetails"
        style="@style/textDetailUser"
        android:textStyle="bold"
        android:textColor="@color/almostWhite"
        android:textSize="18sp"
        android:letterSpacing="0.1"
        android:layout_marginVertical="12sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nameText"
        app:layout_constraintTop_toBottomOf="@id/hr_line"
        />

    <TextView
        android:id="@+id/nameText"
        android:text="@string/full_name"
        style="@style/textDetailUser"
        android:textColor="@color/lightGrey"
        android:textSize="12sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/tvName"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tvUsername"
        style="@style/textDetailUser"
        tools:text="@string/usernameDetails"
        android:textColor="@color/almostWhite"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:letterSpacing="0.1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/usernameText"
        app:layout_constraintTop_toBottomOf="@id/tvName"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/usernameText"
        android:text="@string/username"
        style="@style/textDetailUser"
        android:textColor="@color/lightGrey"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tvUsername"
        app:layout_constraintBottom_toBottomOf="@id/tvUsername"
        app:layout_constraintTop_toTopOf="@id/tvUsername"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tvCompany"
        style="@style/textDetailUser"
        tools:text="@string/companyDetails"
        android:textColor="@color/almostWhite"
        android:layout_marginTop="6dp"
        android:textSize="14sp"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/companyText"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/companyText"
        android:text="@string/company"
        style="@style/textDetailUser"
        android:textColor="@color/lightGrey"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tvCompany"
        app:layout_constraintBottom_toBottomOf="@id/tvCompany"
        app:layout_constraintTop_toTopOf="@id/tvCompany"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tvLocation"
        style="@style/textDetailUser"
        tools:text="@string/locationDetails"
        android:textColor="@color/almostWhite"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        android:letterSpacing="0.1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/locationText"
        app:layout_constraintTop_toBottomOf="@id/tvCompany"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/locationText"
        android:text="@string/location"
        style="@style/textDetailUser"
        android:textColor="@color/lightGrey"
        android:layout_marginBottom="2dp"
        android:textSize="12sp"
        android:letterSpacing="0.1"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/tvLocation"
        app:layout_constraintBottom_toBottomOf="@id/tvLocation"
        app:layout_constraintTop_toTopOf="@id/tvLocation"/>

    <View
        android:id="@+id/hr_line2"
        android:background="#ffffff"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/back_detail"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/VeryDarkGrey"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="2dp"
        app:layout_constraintTop_toBottomOf="@id/hr_line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>