<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/almostWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:text="50"
        app:layout_constraintBottom_toTopOf="@id/tv_repository_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33"/>

    <TextView
        android:id="@+id/tv_repository_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/repository"
        android:textColor="@color/almostWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repository"
        app:layout_constraintWidth_percent="0.33"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_followers"
        android:textColor="@color/almostWhite"
        android:textSize="24sp"
        android:textAlignment="center"
        tools:text = "50"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_follower_text"
        app:layout_constraintStart_toEndOf="@id/tv_repository"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.33"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_follower_text"
        android:textColor="@color/almostWhite"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/followers"
        app:layout_constraintStart_toEndOf="@id/tv_repository_text"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        app:layout_constraintWidth_percent="0.33"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_following"
        android:textColor="@color/almostWhite"
        android:textSize="24sp"
        android:textAlignment="center"
        tools:text = "50"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_following_text"
        app:layout_constraintStart_toEndOf="@id/tv_followers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.34"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_following_text"
        android:textColor="@color/almostWhite"
        android:textSize="14sp"
        android:textAlignment="center"
        android:text="@string/following"
        app:layout_constraintStart_toEndOf="@id/tv_follower_text"
        app:layout_constraintTop_toBottomOf="@id/tv_following"
        app:layout_constraintWidth_percent="0.34"/>
</androidx.constraintlayout.widget.ConstraintLayout>